# lcdlabel

./: LICENSE  README.md  build.sh  pyproject.toml  registerwidget.py
.gitea/workflows/: buildandpublish.yaml  createrelease.yaml
.github/workflows/: buildandpublish.yaml  createrelease.yaml
src/lcdlabel/: __init__.py  __main__.py  example.ui  fonts.py  fonts.qrc  plugin.py  ui_example.py  widget.py
